@@ -25,6 +25,7 @@ import sys, os.path   # Python standard library
 from types import *
 import util, paths            # Gamera specific
 
+
 ######################################################################
 
 # This is a "self-generating" dialog box
@@ -117,9 +118,14 @@ class Int(Arg):
 
 class Real(Arg):
    def __init__(self, name=None,
-                range=(float(-sys.maxint), float(sys.maxint)),
+                range=None,
                 default=None):
       Arg.__init__(self, name)
+      if range is None:
+         #from gamera.plugins.misc_free_functions import range_of_float
+         #(minfloat, maxfloat) = range_of_float()
+         maxfloat = 1048576  # use 2^20 until range_of_float works
+         range = (-maxfloat, maxfloat)
       if not (util.is_sequence(range) and len(range) == 2 and
               type(range[0]) in (int, float) and type(range[1]) in (int, float)):
          raise TypeError("'range' must be a 2-tuple of numbers")
@@ -135,7 +141,10 @@ class Real(Arg):
 
    def rest_repr(self, name=False):
       result = "float"
-      if self.rng != (-sys.maxint, sys.maxint):
+      #from gamera.plugins.misc_free_functions import range_of_float
+      #(minfloat, maxfloat) = range_of_float()
+      maxfloat = 1048576  # use 2^20 until range_of_float works
+      if self.rng != (-maxfloat, maxfloat):
          result += "(%.02f, %.02f)" % tuple([float(x) for x in self.rng])
       if name:
          result += " *%s*" % self.name
